# Tooth_Plant

./: CMakeLists.txt  README.md  build.bat  build_output.txt  customize_implant_preview.stl
header/: CreateComponent.h  CustomizeImplant.h  mainwindow.h
header/data-define/: DataDefine.h
ref/: plant.py  plant_cleaned.py
src/: mainwindow.cpp  mainwindow.ui
static/: CMakeLists.txt  README.md  build.bat  build_output.txt
static/header/: CreateComponent.h  CustomizeImplant.h
static/src/: CreateComponent.cpp  CustomizeImplant.cpp
